--- a/matcher/templates/matcher/song_detail.html
+++ b/matcher/templates/matcher/song_detail.html
@@ -1,8 +1,12 @@
 {% extends "matcher/base.html" %}
+
 {% block content %}
-<h1>{{ song.title }}</h1>
-<p>Artist: <a href="{% url 'matcher:artist_detail' song.artist.id %}">{{ song.artist.name }}</a></p>
-<p>Album: {{ song.album.title }}</p>
-<p>Platform: {{ song.platform }} | External ID: {{ song.external_id }}</p>
-<p>Lyrics: {{ song.lyrics|default:"-" }}</p>
+    <h1>{{ song.title }}</h1>
+    <p>Artist: {{ song.artist.name }}</p>
+    <p>Album: {{ song.album.title }}</p>
+    <p>Genres:
+        {% for genre in song.genres.all %}
+            {{ genre.name }}{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </p>
 {% endblock %}
