--- a/matcher/templates/matcher/login.html
+++ b/matcher/templates/matcher/login.html
@@ -1,9 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'matcher/base.html' %}
 {% load static %}
 
 {% block content %}
 <style>
-    /* ซ่อน Navbar เดิมเพื่อให้หน้า Login สวยเต็มจอ */
     nav.navbar { display: none; }
 
     /* 1. พื้นหลัง & ธีม (สีเดียวกับ Landing Page) */
